--- a/templates/edit_answer.html
+++ b/templates/edit_answer.html
@@ -8,16 +8,16 @@
 
 </head>
 <body>
-    <form action={{ url_for('edit_answer', answer_id=answer['id']) }} method="POST">
+{# TODO: miért kell a for loop? amúgy nem írja ki a message-t bele kellett tennem a commentet loopbe#}
+{% for comment in comment %}
+    <form action={{ url_for('edit_comment', comment_id=comment['id'])}} method="POST">
         <p>
-            <label for="message">Answer:</label><br>
-            <textarea name="message" rows="5" cols="100" minlength="10" required>{{ answer['message'] }}</textarea><br>
+
+            <label for="message">Comment:</label><br>
+            <textarea name="message" rows="5" cols="100" minlength="10" required>{{ comment['message'] }}</textarea><br>
+            {% endfor  %}
         </p>
-        <p>
-            <label for="image">Upload image:</label><br>
-            <textarea name="image" rows="1" cols="50">{{ answer['image'] }}</textarea>
-        </p>
-        <button type="submit">Submit</button>
+        <button type="Update">Submit</button>
     </form>
 </body>
 {% include 'footer.html' %}
