--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Edit Answer</title>
+    <title> Edit Comment</title>
     <link rel="stylesheet" href="/static/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
 </head>
 <body>
-    <form action={{ url_for('edit_comment', answer_id=answer['id'], question_id=answer['question_id']) }} method="POST">
-        <p>
-            <label for="message">Answer:</label><br>
-            <textarea name="message" rows="5" cols="100" minlength="10" required>{{ answer['message'] }}</textarea><br>
-        </p>
-        <p>
-            <label for="image">Upload image:</label><br>
-            <textarea name="image" rows="1" cols="50">{{ answer['image'] }}</textarea>
-        </p>
-        <button type="submit">Submit</button>
-    </form>
+    {% for comment in comment %}
+{# TODO: miért kell a for loop? amúgy nem írja ki a message-t bele kellett tennem a commentet loopbe#}
+    <form action={{ url_for('edit_comment', comment_id=comment['id']) }} method="POST">
+    <p>
+        <label for="message">Comment:</label><br>
+        <textarea name="message" rows="5" cols="100" minlength="10" required>{{comment['message']}}</textarea><br>
+    </p>
+        {% endfor %}
+<button type="Update">Submit</button>
+</form>
 </body>
 {% include 'footer.html' %}
 </html>
