add question image upload updated new answer form updated

--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -14,7 +14,7 @@
     <p><label for="message">Question:</label><br>
     <textarea id="message" name="message" rows="8" cols="80" required></textarea></p>
         <h2>Upload picture</h2>
-        <p><label for="image"> <input type=file name="image"></label></p>
+        <p><textarea name="image" rows="1" cols="50"></textarea></p>
     <p><button type="submit">Ask this question!</button></p>
     </form>
 </body>
