--- a/templates/new_answer.html
+++ b/templates/new_answer.html
@@ -13,7 +13,7 @@
     <form action={{ url_for('route_new_answer', id=question['id']) }} method="POST">
         <p>
             <label for="message">Answer:</label><br>
-            <textarea name="message" rows="5" cols="100" minlength="10" placeholder="Please enter your answer here..." required></textarea>
+            <textarea name="message" rows="5" cols="100" placeholder="Please enter your answer here..." required></textarea>
         </p>
         <p>
             <label for="image">Upload image:</label><br>
