--- a/templates/question.html
+++ b/templates/question.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     {% for question in question %}
-        <h2 id="question">{{ question.title }}</h2>
+        <h2 id="question">{{ question.title }}
+        <a href="{{ url_for('route_list') }}"><i class="fas fa-home" style="color: whitesmoke"></i></a>
+        <a href="/question/{{ question['id'] }}/delete"><i class="fas fa-trash-alt" style="color: whitesmoke"></i></a>
+        </h2>
         <table>
             <thead>
                 <td>ID</td>
@@ -18,9 +21,7 @@
                 <td>Number of votes</td>
                 <td>Image</td>
                 <td>Vote</td>
-                <td>
-                    <a href="/question/{{ question['id'] }}/delete"><i class="fas fa-trash-alt" style="color: whitesmoke"></i></a>
-                </td>
+
             </thead>
             <tbody>
                 <td>{{ question.id }}</td>
@@ -50,26 +51,22 @@
             <p>{{ question['image'] }}</p>
         {% endif %}
         <h4>Question comments:<a href="/question/{{ question['id'] }}/new_comment"><i class="far fa-plus-square" style="color: whitesmoke"></i></a></h4>
-        <h5>
             {% for question_comment in question_comments %}
                 <p id="question_comment">{{ question_comment['message'] }}<br>
                     {{ question_comment['submission_time'] }}
-                    <a href="/comments/{{ question_comment['id'] }}/edit/"><i class="far fa-edit"
-                                                                                                  style="color: whitesmoke"></i></a>
+                    <a href="/comments/{{ question_comment['id'] }}/edit/"><i class="far fa-edit" style="color: whitesmoke"></i></a>
                     <a href="/comments/{{ question_comment['id'] }}/delete/{{ question['id'] }}"><i class="fas fa-trash-alt"
                                                                                                     style="color: whitesmoke"></i></a>
                 </p>
             {% endfor %}
-        </h5>
-
         <hr style="margin-right: 600px;">
         <h3>Answers:
-        <a href="/question/{{ question['id'] }}/new-answer"><i class="far fa-plus-square" style="color: whitesmoke"></i></a></h4>
+        <a href="/question/{{ question['id'] }}/new-answer"><i class="far fa-plus-square" style="color: whitesmoke"></i></a></h3>
 
         <ul>
             {% for answer in answers %}
-                <p>{{ answer['message'] }}</p>
-                <p>
+                <p id="answer_message">{{ answer['message'] }}</p>
+                <p id="answer_data">
                     Vote number: {{ answer['vote_number'] }}
 
                     <button
@@ -83,37 +80,34 @@
                                formaction="/question/<question_id>/vote-down" style="color: darkslategray"></i>
                     </button>
 
-                <a href="/answer/{{ answer['id'] }}/edit/{{ answer['question_id'] }}"><i class="far fa-edit" style="color: black"></i></a>
-                <a href="/answer/{{ answer['id'] }}/delete/{{ answer['question_id'] }}"><i class="fas fa-trash-alt" style="color: black"></i></a>
-            </p>
-            <h5>Comments:
+                <a href="/answer/{{ answer['id'] }}/edit/{{ answer['question_id'] }}"><i class="far fa-edit" style="color: whitesmoke"></i></a>
+                <a href="/answer/{{ answer['id'] }}/delete/{{ answer['question_id'] }}"><i class="fas fa-trash-alt" style="color: whitesmoke"></i></a>
+                </p>
+            <h4>Comments:
                 <a href="/question/{{ question['id'] }}/{{ answer['id'] }}/new_comment"><i class="far fa-plus-square"
-                                                                                           style="color: black"></i></a>
-            </h5>
+                                                                                           style="color: whitesmoke"></i></a>
+            </h4>
             {% for answer_comment in answer_comments %}
                 {% if answer['id'] == answer_comment['answer_id'] %}
-                    <h6>
-                        <p>{{ answer_comment['message'] }}<br>
-                            {{ answer_comment['submission_time'] }}
-                            <a href="/comments/{{ answer_comment['id'] }}/edit"><i
-                                    class="far fa-edit"
-                                    style="color: black"></i></a>
-                            <a href="/comments/{{ answer_comment['id'] }}/delete/{{ question['id'] }}"><i
-                                    class="fas fa-trash-alt"
-                                    style="color: black"></i></a>
-                        </p>
-                    </h6>
+                    <p id="answer_comment">{{ answer_comment['message'] }}<br>
+                        {{ answer_comment['submission_time'] }}
+                        <a href="/comments/{{ answer_comment['id'] }}/edit"><i
+                                class="far fa-edit"
+                                style="color: whitesmoke"></i></a>
+                        <a href="/comments/{{ answer_comment['id'] }}/delete/{{ question['id'] }}"><i
+                                class="fas fa-trash-alt"
+                                style="color: whitesmoke"></i></a>
+                    </p>
+
                 {% endif %}
             {% endfor %}
 
-            <p>Vote number: {{ answer['vote_number'] }}</p>
             <hr style="margin-right: 600px">
 
         {% endfor %}
 
-    </ul>
-
-{% endfor %}
+        </ul>
+    {% endfor %}
 </body>
 {% include 'footer.html' %}
 </html>
