--- a/static/style.css
+++ b/static/style.css
@@ -6,11 +6,11 @@ h1 {
     right: 400px;
     top: 100px;
 }
-}
+
 
 h2{
     color: #ecd482;
-    font-size: 30px;
+    font-size: 60px;
     font-family: Ubuntu;
     padding-left: 20px;
     padding-top: 30px;
@@ -19,20 +19,33 @@ h2{
 
 #question{
     color: #d7ac62;
-    font-size: 30px;
+    font-size: 50px;
     padding-left: 30px;
 }
 
+h3{
+    font-size: 25px;
+    color: #d7ac62;
+    padding-left: 30px;
+}
 h4{
     padding-left: 20px;
 }
 
 h5{
     color: #d7ac62;
-    font-size: 15px;
-    padding-left: 50px;
+    font-size: 20px;
+    padding-left: 60px;
 }
 
+h6{
+    font-size: 17px;
+    padding-left: 60px;
+}
+
+p{
+    padding-left: 50px;
+}
 a{
     font-size: 25px;
     padding-left: 20px;
@@ -46,7 +59,7 @@ a:hover{
 }
 
 body {
-    background-color: blue;
+    background-image: url("/static/fancybackground.jpg");
     background-attachment: fixed;
     background-size: 110%;
     padding-left: 20px;
@@ -69,6 +82,8 @@ hr{
 
 #question_message{
     padding-right: 600px;
+    padding-left: 50px;
+    font-size: 20px;
 }
 
 table{
@@ -77,7 +92,7 @@ table{
 }
 
 td{
-    padding: 0px 20px;
+    padding: 0px 30px;
 }
 
 thead{
@@ -125,6 +140,6 @@ thead{
     font-size: 17px;
 }
 
-far fa-plus-square{
-    color: antiquewhite;
+#answer_comment{
+    font-weight: lighter;
 }
