--- a/templates/edit_answer.html
+++ b/templates/edit_answer.html
@@ -10,7 +10,7 @@
     <form action={{ url_for('edit_answer', answer_id=answer['id'], question_id=answer['question_id']) }} method="POST">
         <p>
             <label for="message">Answer:</label><br>
-            <textarea name="message" rows="5" cols="100" minlength="10" required>{{ answer['message'] }}</textarea><br>
+            <textarea name="message" rows="5" cols="100" required>{{ answer['message'] }}</textarea><br>
         </p>
         <p>
             <label for="image">Upload image:</label><br>
