--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <a href="{{ url_for('route_list') }}"><i class="fas fa-home" style="color: black"></i></a><br>
+    <a href="{{ url_for('route_list') }}"><i class="fas fa-home" style="color: whitesmoke"></i></a><br>
 </footer>
