comment delete confirmation

--- a/templates/list.html
+++ b/templates/list.html
@@ -21,8 +21,8 @@
             <option value="view_number">View Number</option>
             <option value="vote_number">Vote Number</option>
         </select>
-        <input type="radio" name="order" value="asc">ascendant
-        <input type="radio" name="order" value="desc">decrescent
+        <input type="radio" name="order" value="asc">ascending
+        <input type="radio" name="order" value="desc">descending
         <input type="submit" value="Sort">
     </form>
     <ul id="list_question" style="list-style-type:none;">
