--- a/templates/question.html
+++ b/templates/question.html
@@ -19,8 +19,9 @@
         <td>Image</td>
         <td>Vote</td>
         <td>
-            <a href="/question/{{ question['id'] }}/delete"><i class="fas fa-trash-alt"
-                                                               style="color: whitesmoke"></i></a>
+            <a href="/question/{{ question['id'] }}/delete" onclick="return confirm('Are you sure you want to delete this item?');"><i class="fas fa-trash-alt"
+                                                               style="color: whitesmoke"></i></>
+
         </td>
         </thead>
         <tbody>
@@ -59,8 +60,8 @@
                 {{ question_comment['submission_time'] }}
                 <a href="/comments/{{ question_comment['id'] }}/edit/"><i class="far fa-edit"
                                                                           style="color: whitesmoke"></i></a>
-                <a href="/comments/{{ question_comment['id'] }}/delete/{{ question['id'] }}"><i class="fas fa-trash-alt"
-                                                                                                style="color: whitesmoke"></i></a>
+                <a href="/comments/{{ question_comment['id'] }}/delete/{{ question['id'] }}" onclick="return confirm('Are you sure you want to delete this item?');"><i class="fas fa-trash-alt"
+                                                                                                style="color: whitesmoke"></i></>
             </p>
         {% endfor %}
     </h5>
@@ -104,7 +105,7 @@
                             <a href="/comments/{{ answer_comment['id'] }}/edit"><i
                                     class="far fa-edit"
                                     style="color: whitesmoke"></i></a>
-                            <a href="/comments/{{ answer_comment['id'] }}/delete/{{ question['id'] }}"><i
+                            <a href="/comments/{{ answer_comment['id'] }}/delete/{{ question['id'] }}" onclick="return confirm('Are you sure you want to delete this item?');"><i
                                     class="fas fa-trash-alt"
                                     style="color: whitesmoke"></i></a>
                         </p>
